--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -10,7 +10,7 @@ body {
     font-weight: 400;
     line-height: 1.4;
     
-    font-size: 1.4em;
+    font-size: 1.6em;
     
     @include x-small {
         font-size: 1.6em;
